--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,22 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="nl.norbot.senseswipe.MainActivity" />
         </activity>
+        <activity
+            android:name=".CameraActivity"
+            android:label="@string/title_activity_camera"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="nl.norbot.senseswipe.MainActivity" />
+        </activity>
+        <activity
+            android:name=".TypingActivity"
+            android:label="@string/title_activity_typing"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="nl.norbot.senseswipe.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
