Created DDR layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="nl.norbot.senseswipe.MainActivity" />
         </activity>
+        <activity
+            android:name=".DDRActivity"
+            android:label="@string/title_activity_ddr"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="nl.norbot.senseswipe.MainActivity" />
+        </activity>
 
         <service
             android:name=".FingerprintGestureService"
