--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,7 +66,8 @@
                 android:resource="@xml/fingerprintgestureservice" />
         </service>
 
-        <activity android:name=".FinishedActivity"></activity>
+        <activity android:name=".FinishedActivity" />
+        <activity android:name=".DDR_scrollingActivity"></activity>
     </application>
 
 </manifest>
